# TempestSZ

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: gen_embedded_assets.py  toolchain-ucrt64-clang.cmake
src/: Bullet.cpp  Bullet.hpp  Collision.cpp  Collision.hpp  Constants.hpp  ContourSystem.cpp  ContourSystem.hpp  Enemy.cpp  Enemy.hpp  GameState.cpp  GameState.hpp  HUD.cpp  HUD.hpp  IRP.cpp  IRP.hpp  Input.cpp  Input.hpp  Jukebox.cpp  Jukebox.hpp  Particles.cpp  Particles.hpp  Persistence.cpp  Persistence.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  SFX.cpp  SFX.hpp  Well.cpp  Well.hpp  main.cpp  sz_resources.rc  win_icon.cpp  winpthread_stubs.c
src/shaders/: bloom_blur.fs  bloom_composite.fs  bloom_downsample.fs
